# sb-chat

./: README.md  manage.py  pyproject.toml
app/: schema.py  views.py
app/static/app/js/: room.js
app/templates/app/: room.html
sb_chat/: asgi.py  settings.py  urls.py  wsgi.py
