[tool.poetry]
name = "sb-chat"
version = "0.1.0"
description = ""
authors = ["James Thorniley <james.thorniley@mixcloud.com>"]
readme = "README.md"
packages = [{include = "sb_chat"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
